--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
 
         <!--  ^  add pictures and captions above  ^  -->
       </div>
+      
+    </div><!-- begin turtle picture and caption -->
+<div class="center-container">
+  <div class="card">
+    <div class="caption">
+      <h4>From the Sky</h4>
+      <p>Montse Grillo</p>
+      <p>Tenerife, Canary Islands</p>
     </div>
+  </div>
+  <div class="card">
+    <img src="public/img/turtle.jpg" alt="sea turtle swimming">
+  </div>
+</div>
   </body>
 </html>
